[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PTN-Utils"
version = "0.1.0"
description = "Common utilities for multiple PTN Bots"
authors = [
    { name = "Conshmea"},
    { name = "Axle Antilles"},
    { name = "IndorilReborn"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["ptn_utils"]
